--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <p>&amp; Hello world. This is my first website!</p>
-  <p>This is lab 1 /p>
+  <p>This is lab 1 </p>
   <p>I have added additional paragraphs</p>
   <p>This is the last paragraph</p>
   
